Fix spacing between facets

--- a/packages/web-components/src/components/va-search-filter/va-search-filter.scss
+++ b/packages/web-components/src/components/va-search-filter/va-search-filter.scss
@@ -15,7 +15,6 @@ va-accordion-item::part(accordion-content) {
 }
 
 va-checkbox-group, va-radio {
-  margin-top: 10px;
   &::part(legend) {
     font-weight: bold;
   }
@@ -23,6 +22,14 @@ va-checkbox-group, va-radio {
     font-family: var(--font-source-sans);
     font-size: var(--font-size-md);
   }
+}
+
+.desktop-margin-top {
+  margin-top: -10px !important;
+}
+
+.mobile-margin-top {
+  margin-top: 10px;
 }
 
 #filter-buttons {
